--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="styles.css" />
 <body>
   <div class="controls">
-  	<a id="exportify">exportify</a>
+  	<a id="exportify">export map to SVG</a>
     <p>Search for a place:</p>
     <input type="text" id="search-text" />
     <input type="submit" id="search-submit" />
