--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link rel="stylesheet" href="https://mapzen.com/common/styleguide/styles/styleguide.css">
 <link rel="stylesheet" href="styles.css" />
 <body>
   <div class="controls">
-  	<a id="exportify">export map to SVG</a>
+  	<a id="exportify" class="btn btn-mapzen">Export to SVG</a>
     <p>Search for a place:</p>
     <input type="text" id="search-text" />
     <input type="submit" id="search-submit" />
@@ -16,7 +17,6 @@
 <script src="https://cdn.rawgit.com/mbostock/topojson/3ed6ee9e04d4/topojson.js"></script>
 <script src='//s3.amazonaws.com/assets-staging.mapzen.com/ui/components/bug/bug.min.js'></script>
 <script type='text/javascript'>
-  window.bugTitle = 'Map using d3 and topojson';
-  
+  window.bugTitle = 'Exporting map tiles to SVG';
 </script>
 <script src="index.js"></script>
