--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
   <div class="controls">
   	<a id="exportify" class="btn btn-mapzen">Export to SVG</a>
-    <p>Search for a place:</p>
+    <h4>Search for a place:</h4>
     <input type="text" id="search-text" />
     <input type="submit" id="search-submit" />
-    <p>Choose what to display:</p>
+    <h4>Choose what to display:</h4>
     <ul class="layer-toggle"></ul>
   </div>
 <script src="d3.v3.min.js"></script>
