--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <body>
   <div class="controls">
   	<a id="exportify" class="btn btn-mapzen">Export to SVG</a>
-    <h4>Search for a place:</h4>
-    <input type="text" id="search-text" />
-    <input type="submit" id="search-submit" />
+	<div class="form-group inline-submit">
+		<input type="search" id="search-text" placeholder="type in a place">
+		<input type="submit" id="search-submit" value="search" class="btn btn-transparent">
+	</div>
     <h4>Choose what to display:</h4>
     <ul class="layer-toggle"></ul>
   </div>
